[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/level_editor/ImportDialog.gd" type="Script" id=2]

[node name="ImportDialog" type="WindowDialog"]
margin_left = 5.0
margin_top = 5.0
margin_right = 749.0
margin_bottom = 449.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 744.0
margin_bottom = 408.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 724.0
margin_bottom = 388.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragDrop" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 704.0
margin_bottom = 22.0
text = "Option 1: Drag and Drop level file to import here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 704.0
margin_bottom = 41.0

[node name="EnterText" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 704.0
margin_bottom = 181.0
text = "Option 2: Enter level text here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 704.0
margin_bottom = 368.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 704.0
margin_bottom = 144.0

[node name="SelectFile" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 704.0
margin_bottom = 78.0
text = "Option 3: Select level file"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 704.0
margin_bottom = 125.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrowseFiles" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 283.0
margin_right = 420.0
margin_bottom = 32.0
text = "Browse files..."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 412.0
margin_right = 744.0
margin_bottom = 444.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 407.0
margin_bottom = 32.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/Users/Dardan/code/gameoff-2020"
current_path = "/Users/Dardan/code/gameoff-2020/"
[connection signal="text_changed" from="VBoxContainer/MarginContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/BrowseFiles" to="." method="_on_BrowseFiles_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
